# geoclue-to-owntracks

./: .gitignore  Makefile  Makefile.am  README.md  battery.c  battery.h  configure.ac  geoclue-to-owntracks.c  libowntracks.c  owntracks.c  owntracks.h
